--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -7,28 +7,56 @@
 body{
     overflow-x: hidden;
 }
-.nav{
-    display: flex;
-
+.name{
+    letter-spacing: 5px;
+    padding: 2rem;
+    font-size: 15px;
+    font-weight: 600;
 }
-.navbar-brand{
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin-right: 450px;
-    margin-left: 50px;
-}
-
-.navbar-nav li{
-    margin-right: 45px;
-}
-
-
-.Home-Section{
-    width: 100%;
-    height: 100vh;
+.image{
+    width: 1000px;
+    height: 600px;
+    left: 550px;
+    bottom: 110px;
+    position: relative;
     background-size: cover;
     background-position: center;
     object-fit: cover;
-    background-image: url("../Assets/Home-img.jpg");
+    background-image: url("../Assets/01.png");
+}
+.Text-Section{
+    position: absolute;
+    margin: auto;
+    bottom: 60px;
+    padding: 7rem;
+}
+.Text-Section h1{
+    font-family: 'Merriweather Sans', sans-serif;
+}
+.Text-Section p{
+    font-family: 'PT Sans Caption', sans-serif;
+}
+
+.btn {
+    padding: 12px 32px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    background:  rgba(0, 0, 0, 0.2);
+    color: #ffffff;
+    border: 1px solid darkgrey;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.btn-light {
+    background: transparent;
+    color: blue;
+}
+
+.btn:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #000000;
+    transition: 0.5s;
 
 }
