--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -22,7 +22,7 @@ body{
 }
 .image{
     width: 1000px;
-    height: 650px;
+    height: 600px;
     left: 600px;
     bottom: 110px;
     position: relative;
@@ -69,4 +69,26 @@ body{
     color: #ffffff;
     transition: 0.5s;
 
+}
+h1,h4,p,a{
+    color: black;
+    text-decoration: none;
+
+}
+.contact-menu{
+    position: absolute;
+    margin: auto;
+    bottom: 25px;
+
+}
+.nav-link{
+    color: black;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    font-weight: bold;
+}
+
+#contact-now{
+    margin-left: 600px;
+    margin-right: 455px;
 }
